@@ -1,25 +1,22 @@
 package gov.epa.ccte.api.hazard.security;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import gov.epa.ccte.api.hazard.domain.ApiKey;
-import gov.epa.ccte.api.hazard.repository.ApiKeyRepository;
 import gov.epa.ccte.api.hazard.web.rest.error.AuthorizationProblem;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.context.annotation.Profile;
-import org.springframework.stereotype.Component;
-import org.springframework.web.filter.GenericFilterBean;
-
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.ServletRequest;
 import jakarta.servlet.ServletResponse;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.context.annotation.Profile;
+import org.springframework.stereotype.Component;
+import org.springframework.web.filter.GenericFilterBean;
+
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
-import java.util.List;
+import java.nio.charset.StandardCharsets;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
@@ -29,39 +26,43 @@ import java.util.concurrent.ConcurrentHashMap;
 @Component
 public class ApiKeyRequestFilter extends GenericFilterBean {
 
-    private ConcurrentHashMap<UUID, String> keyStore;// = new ConcurrentHashMap();
-    private ConcurrentHashMap<String, String> approvedOriginStore;// = new ConcurrentHashMap();
+    private final ConcurrentHashMap<UUID, String> keyStore;// = new ConcurrentHashMap();
+    private final ConcurrentHashMap<String, String> approvedOriginStore;// = new ConcurrentHashMap();
     private final ObjectMapper mapper = new ObjectMapper();
     private final String keyName;
 
-    public ApiKeyRequestFilter(ApiKeyRepository repository, @Value("${application.api-key-name}") String keyName) {
+    public ApiKeyRequestFilter(ConcurrentHashMap<UUID, String> keyStore,
+                               ConcurrentHashMap<String, String> approvedOriginStore,
+                               @Value("${application.api-key-name}") String keyName) {
+        this.keyStore = keyStore;
+        this.approvedOriginStore = approvedOriginStore;
         this.keyName = keyName;
 
-        initializeKeyStore(repository);
-        initializeApprovedOriginStore();
+        //initializeKeyStore(repository);
+        //initializeApprovedOriginStore();
     }
 
-    private void initializeApprovedOriginStore() {
-        approvedOriginStore = new ConcurrentHashMap<>();
-        approvedOriginStore.put("http://localhost:3003", "http://localhost:3003");
-        approvedOriginStore.put("http://localhost:8888", "http://localhost:8888");
-        approvedOriginStore.put("https://ccte-ccd-dev.epa.gov", "https://ccte-ccd-dev.epa.gov");
-        approvedOriginStore.put("https://ccte-ccd-stg.epa.gov", "https://ccte-ccd-stg.epa.gov");
-        approvedOriginStore.put("https://ccte-ccd-prod.epa.gov", "https://ccte-ccd-prod.epa.gov");
-        approvedOriginStore.put("https://comptox.epa.gov", "https://comptox.epa.gov");
-        approvedOriginStore.put("https://ccte-api-s.app.cloud.gov", "https://ccte-api-s.app.cloud.gov");
-    }
+//    private void initializeApprovedOriginStore() {
+//        approvedOriginStore = new ConcurrentHashMap<>();
+//        approvedOriginStore.put("http://localhost:3003", "http://localhost:3003");
+//        approvedOriginStore.put("http://localhost:8888", "http://localhost:8888");
+//        approvedOriginStore.put("https://ccte-ccd-dev.epa.gov", "https://ccte-ccd-dev.epa.gov");
+//        approvedOriginStore.put("https://ccte-ccd-stg.epa.gov", "https://ccte-ccd-stg.epa.gov");
+//        approvedOriginStore.put("https://ccte-ccd-prod.epa.gov", "https://ccte-ccd-prod.epa.gov");
+//        approvedOriginStore.put("https://comptox.epa.gov", "https://comptox.epa.gov");
+//        approvedOriginStore.put("https://ccte-api-s.app.cloud.gov", "https://ccte-api-s.app.cloud.gov");
+//    }
 
-    private void initializeKeyStore(ApiKeyRepository repository) {
-        keyStore = new ConcurrentHashMap<>();
-
-        List<ApiKey> keys = repository.findAll();
-
-        for(ApiKey key : keys)
-            keyStore.put(key.getId(), key.getEmail());
-
-        log.info("*** {} keys are loaded. *** ", keys.size());
-    }
+//    private void initializeKeyStore(ApiKeyRepository repository) {
+//        keyStore = new ConcurrentHashMap<>();
+//
+//        List<ApiKey> keys = repository.findAll();
+//
+//        for(ApiKey key : keys)
+//            keyStore.put(key.getId(), key.getEmail());
+//
+//        log.info("*** {} keys are loaded. *** ", keys.size());
+//    }
 
     @Override
     public void doFilter(ServletRequest servletRequest, ServletResponse servletResponse, FilterChain filterChain) throws IOException, ServletException {
@@ -93,12 +94,12 @@ public class ApiKeyRequestFilter extends GenericFilterBean {
             String key = getApiKeyfromHttpHeader(req.getHeader(keyName));
 
             // In case user is provided api key through parameter x-api-key
-            if (key == null || key.equals("")) {
+            if (key == null || key.isEmpty()) {
                 // get key from the URL parameter
                 key = getApiKeyFromQueryParam(req.getQueryString());
             }
 
-            if (key == null || key.equals("")) {
+            if (key == null || key.isEmpty()) {
                 // api key is missing
                 returnErrorMsg(servletResponse, key);
             } else if (isKeyExist(key)) {
@@ -123,20 +124,22 @@ public class ApiKeyRequestFilter extends GenericFilterBean {
         String path = Optional.ofNullable(req.getServletPath()).orElse(""); // example - path = /chemical/file/image/search/by-dtxsid/DTXSID7020182
 
         String refererdHost;
-        if(!referer.equals("")){
+        if(!referer.isEmpty()){
             refererdHost = "https://" + referer.split("/")[2];  // example - referredHost = localhost:8888
         }else{
             refererdHost = ""; //"https://" + req.getHeader("Referer").split("/")[2];  // example - referredHost = localhost:8888
         }
 
-        log.debug("origin = {}, referer ={}, refererdHost = {}, path={} ",origin, referer, refererdHost, path);
+        log.debug("method = {}, origin = {}, referer ={}, refererdHost = {}, path={} ",method, origin, referer, refererdHost, path);
 
         // if chemical/file path - allow access to images without any api key
         if(path.contains("/chemical/file/")){
+            log.debug("skipping api-key check");
             return false;
         }
 
-        if(method.equalsIgnoreCase("OPTIONS") || approvedOrigin(origin) || approvedOrigin(refererdHost))
+//        if(method.equalsIgnoreCase("OPTIONS") || approvedOrigin(origin) || approvedOrigin(refererdHost))
+        if(approvedOrigin(origin) || approvedOrigin(refererdHost))
             return false;
         else
             return true;
@@ -148,7 +151,7 @@ public class ApiKeyRequestFilter extends GenericFilterBean {
     }
 
 
-    private String getApiKeyFromQueryParam(String query) throws UnsupportedEncodingException {
+    private String getApiKeyFromQueryParam(String query) {
 
         // an example -  format=svg&x-api-key=f1d96bdd-223a-434e-b1c0-af373a59a19e
 
@@ -158,7 +161,7 @@ public class ApiKeyRequestFilter extends GenericFilterBean {
             for(String param: params){
                 int idx = param.indexOf("=");
                 if(param.substring(0,idx).equalsIgnoreCase(keyName)){
-                    return URLDecoder.decode(param.substring(idx + 1),"UTF-8");
+                    return URLDecoder.decode(param.substring(idx + 1), StandardCharsets.UTF_8);
                 }
             }
         }
@@ -169,7 +172,7 @@ public class ApiKeyRequestFilter extends GenericFilterBean {
         // Get apikey from the http header
         //String key = req.getHeader(keyName) == null ? "" : req.getHeader(keyName);
 
-        if(key == null || key.equals("")){
+        if(key == null || key.isEmpty()){
             log.debug("Custom http  header {} not found", keyName);
         }
 
@@ -181,7 +184,7 @@ public class ApiKeyRequestFilter extends GenericFilterBean {
 
         AuthorizationProblem problem;
 
-        if(key == null || key.equals("")){
+        if(key == null || key.isEmpty()){
             // header is missing
             problem = AuthorizationProblem.builder()
                     .title("API Header Not Found")
